# LPRO-25_26

./: .gitignore  README.md
PoC/yolo-testing/: README.md
PoC/yolo-testing/source/: detect_objects.py  pose_estimation.py
Web/Web/: components.py  state.py
state_of_the_art/: estado_arte.tex  references.bib
top_down_pose_estimation/: .gitignore  README.md
top_down_pose_estimation/src/: config.py  main.py
top_down_pose_estimation/src/experiments/: global_image_pose.py  video_objects.py  video_pose.py
top_down_pose_estimation/src/utils/: detector.py  io_handler.py  visualizer.py
vision/: README.md  pyproject.toml
vision/experiments/: gpu_info.py  img_pose_estimation.py  video_player_tracking.py  video_pose_estimation.py
vision/scripts/: setup.sh
vision/src/: __init__.py  config.py  main.py  paths.py  pipeline.py
vision/src/utils/: image_processor.py  io_handler.py  super_resolution.py  visualizer.py
web/Timecutter/: example.md  timecutter.py
web/Web/: requirements.txt  rxconfig.py
web/Web/Web/: Web.py  components.py  state.py
web/microservicio_Timecutter/: example.md  requirements.txt
web/microservicio_upload/: example.md  upload.py
